RESOLVED FIXED175328
RenderQuote should not mutate render tree
https://bugs.webkit.org/show_bug.cgi?id=175328
Summary RenderQuote should not mutate render tree
Antti Koivisto
Reported 2017-08-08 09:38:02 PDT
Mutations should be done by RenderTreeUpdater only.
Attachments
patch (17.79 KB, patch)
2017-08-08 09:40 PDT, Antti Koivisto
buildbot: commit-queue-
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (1.26 MB, application/zip)
2017-08-08 11:02 PDT, Build Bot
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (20.08 MB, application/zip)
2017-08-08 11:47 PDT, Build Bot
no flags
Archive of layout-test-results from ews102 for mac-elcapitan (1.51 MB, application/zip)
2017-08-08 12:10 PDT, Build Bot
no flags
patch (17.45 KB, patch)
2017-08-08 12:11 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2017-08-08 09:40:09 PDT
Build Bot
Comment 2 2017-08-08 11:02:19 PDT
Comment on attachment 317579 [details] patch Attachment 317579 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/4278808 New failing tests: fast/css-generated-content/close-quote-negative-depth.html
Build Bot
Comment 3 2017-08-08 11:02:20 PDT
Created attachment 317585 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-08-08 11:47:04 PDT
Comment on attachment 317579 [details] patch Attachment 317579 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/4278946 New failing tests: http/tests/security/contentSecurityPolicy/report-status-code-zero-when-using-https.html fast/css-generated-content/close-quote-negative-depth.html
Build Bot
Comment 5 2017-08-08 11:47:06 PDT
Created attachment 317587 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Build Bot
Comment 6 2017-08-08 12:10:16 PDT
Comment on attachment 317579 [details] patch Attachment 317579 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/4279098 New failing tests: fast/css-generated-content/close-quote-negative-depth.html
Build Bot
Comment 7 2017-08-08 12:10:18 PDT
Created attachment 317596 [details] Archive of layout-test-results from ews102 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Antti Koivisto
Comment 8 2017-08-08 12:11:59 PDT
alan
Comment 9 2017-08-08 22:12:20 PDT
Comment on attachment 317598 [details] patch I wish there was a way to not have this special node add/remove on the RenderView. I'm concerned we'll end up with many of these types while they should instead be in of some kind of context that we pass around during layout/painting etc (well probably not this one though).
Antti Koivisto
Comment 10 2017-08-09 00:05:53 PDT
I think this is a slightly different case as it is not a layout time structure.
WebKit Commit Bot
Comment 11 2017-08-09 00:36:49 PDT
Comment on attachment 317598 [details] patch Clearing flags on attachment: 317598 Committed r220447: <http://trac.webkit.org/changeset/220447>
WebKit Commit Bot
Comment 12 2017-08-09 00:36:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.