Source/WebCore/rendering/RenderQuote.h
@@ -31,12 +31,9 @@ public:
     RenderQuote(Document&, RenderStyle&&, QuoteType);
     virtual ~RenderQuote();
 
-    void attachQuote();
+    static void updateRenderers(const RenderView&);
 
 private:
-    void willBeDestroyed() override;
-    void detachQuote();
-
     const char* renderName() const override { return "RenderQuote"; }
     bool isQuote() const override { return true; }
     void styleDidChange(StyleDifference, const RenderStyle*) override;
@@ -44,15 +41,13 @@ private:
     void willBeRemovedFromTree() override;
 
     String computeText() const;
-    void updateText();
-    void updateDepth();
+    void updateTextRenderer();
 
     const QuoteType m_type;
     int m_depth { -1 };
-    RenderQuote* m_next { nullptr };
-    RenderQuote* m_previous { nullptr };
-    bool m_isAttached { false };
     String m_text;
+
+    bool m_needsTextUpdate { false };
 };
 
 } // namespace WebCore
